<resources>
    <string name="app_name">Local Coffee Shops</string>
    <string name="order_coffee_text">Order Coffee</string>
    <string name="view_orders_text">View Orders</string>
    <string name="facebook_share_text">Share on Facebook</string>
    <string name="lcs_title_text">Local Coffee Shops</string>
    <string name="lcs_logo_description">the LCS logo</string>
    <string name="view_orders_name">View Orders</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="incorrect_login_popup">Incorrect username/password combination. Please try again.</string>
    <string name="login_button_text">Log In</string>
    <string name="register_button_text">Register</string>
    <string name="register_menu_title">Register a New Account</string>
    <string name="account_exists_popup">Account with those credentials already exists. Please try another username/password combination.</string>
    <string name="login_title"> Log In</string>
    <string name="test_popup">test</string>
    <string name="clicked_popup">clicked</string>
    <string name="food_text">Food</string>
    <string name="drinks_text">Drinks</string>
    <string name="food_or_drink_text">Food/Drink:</string>
    <string name="menu_item_text">Item:</string>
    <string name="account_created">Account Successfully Created!</string>
    <string name="return_to_login">Return to Log In Screen</string>
    <string name="order_menu_title">Menu</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="select_item_button">Select</string>
    <string name="shopping_cart">View Your Order</string>
    <string name="total">Total:</string>
    <string name="submit_order">Submit Order</string>
    <string name="dollar_amount">$%.2f</string>
    <string name="add_selected_item">Add Selected Item</string>
    <string name="shopping_cart_title">Your Order:</string>
    <string name="return_to_orders">Return to Order Screen</string>
    <string name="cart_empty">Your order is currently empty.</string>
    <string name="order_submitted">Order Submitted!</string>
    <string name="return_main_menu">Return to Main Menu</string>
    <string name="date">Date:</string>
    <string name="location">Location:</string>
    <string name="default_string">default</string>
    <string name="your_orders">Your Orders</string>
    <string name="no_existing_orders">You don\'t currently have any orders</string>
    <string name="username">Username:</string>
    <string name="view_this_order">View This Order</string>
    <string name="order_number">Order #%d</string>
    <string name="return_">Return</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_location">Enter Location:</string>
    <string name="location_dotdotdot">Location...</string>
    <string name="go_button">Go</string>
    <string name="go_back">Go Back</string>
    <string name="select_location">Select This Location</string>
    <string name="display_location">%s \n%s</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="date_and_time_title">Select Date and Time</string>
    <string name="colon">:</string>
    <string name="select_dateTime_button">Select this Date and Time</string>
    <string name="time">Time:</string>
</resources>
