<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBCD89"
    tools:context=".OrderCoffee" >

    <TextView
        android:id="@+id/menu_item_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="11dp"
        android:text="@string/menu_item_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/menu_item_spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/menu_item_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="361dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="284dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_textview" />

    <TextView
        android:id="@+id/menu_textview"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_marginStart="123dp"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:fontFamily="casual"
        android:text="@string/order_menu"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/food_drink_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="361dp"
        android:layout_height="44dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="181dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_textview" />

    <TextView
        android:id="@+id/food_drink_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginBottom="18dp"
        android:text="@string/food_or_drink_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/food_drink_spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:layout_width="369dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="26dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_item_spinner">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:text="@string/large" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>